fix: dropdown z-index in custom-select

--- a/src/assets/styles/form/select.scss
+++ b/src/assets/styles/form/select.scss
@@ -30,7 +30,7 @@
       max-height: 400px;
       padding: 8px;
       border: 1px solid $primary-dark-second;
-      z-index: 2;
+      z-index: 10;
     }
     &.datepicker {
       &.hide {
